--- a/source/sass/blocks/mirrors-smart-advantages.scss
+++ b/source/sass/blocks/mirrors-smart-advantages.scss
@@ -1,6 +1,4 @@
 .mirrors-smart-advantages {
-  padding: 70px 0;
-
   &__descr {
     font-size: 1.5rem;
   }
@@ -10,6 +8,36 @@
 
     &-title {
       font-size: 2rem;
+    }
+  }
+}
+
+@include media-breakpoint-down(lg) {
+  .mirrors-smart-advantages {
+    &__item {
+      &-title {
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .mirrors-smart-advantages {
+    &__descr {
+      font-size: 1rem;
+    }
+
+    &__item {
+      text-align: center;
+
+      img {
+        height: 72px;
+      }
+
+      &-title {
+        font-size: 20px;
+      }
     }
   }
 }
