--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,7 @@
 @import 'blocks/delivery';
 @import 'blocks/dropdown';
 @import 'blocks/factory';
+@import 'blocks/filter';
 @import 'blocks/footer';
 @import 'blocks/form-control';
 @import 'blocks/header';
@@ -40,6 +41,7 @@
 @import 'blocks/search-form';
 @import 'blocks/section-parallax';
 @import 'blocks/select2';
+@import 'blocks/seo-txt';
 @import 'blocks/service';
 @import 'blocks/shops-slider';
 @import 'blocks/shops';
@@ -47,5 +49,6 @@
 @import 'blocks/slick';
 @import 'blocks/smart-category';
 @import 'blocks/subscribe';
+@import 'blocks/suggest-post';
 @import 'blocks/text';
 @import 'blocks/why-us';
