--- a/source/sass/blocks/dropdown.scss
+++ b/source/sass/blocks/dropdown.scss
@@ -1,9 +1,19 @@
 .dropdown {
   &-toggle {
+    font-weight: inherit;
+
     &::after {
       vertical-align: middle;
       transition: $transition-base;
     }
+  }
+
+  &-menu {
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+  }
+
+  &-item {
+    font-weight: inherit;
   }
 
   &.show &-toggle {
