--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,7 @@
 @import 'blocks/about-intro';
 @import 'blocks/about-products';
 @import 'blocks/advantages-item';
+@import 'blocks/bg-black';
 @import 'blocks/blog-post';
 @import 'blocks/breadcrumb';
 @import 'blocks/btn-toggle';
@@ -36,6 +37,7 @@
 @import 'blocks/post';
 @import 'blocks/posts-slider';
 @import 'blocks/product-card';
+@import 'blocks/product-more';
 @import 'blocks/requisites';
 @import 'blocks/salons';
 @import 'blocks/search-form';
