--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -1,8 +1,15 @@
 .filter {
-  padding: 12px 30px;
-  border: 1px solid $input-border-color;
-  color: $secondary;
-  font-weight: 500;
+  background-color: #fff;
+  position: sticky;
+  top: 40px;
+  z-index: 4;
+
+  &__inner {
+    padding: 12px 30px;
+    border: 1px solid $input-border-color;
+    color: $secondary;
+    font-weight: 500;
+  }
 
   .dropdown-toggle {
     color: inherit;
@@ -50,6 +57,7 @@
     &-field {
       border: 0;
       font-weight: inherit;
+      background-color: transparent;
       color: $secondary;
       flex-grow: 1;
 
@@ -61,5 +69,9 @@
         outline: none;
       }
     }
+  }
+
+  &--top &__inner {
+    border-color: transparent;
   }
 }
