--- a/source/sass/helpers/helpers.scss
+++ b/source/sass/helpers/helpers.scss
@@ -10,6 +10,7 @@
   padding: 0;
   border: 0;
   background-color: transparent;
+  color: inherit;
 }
 
 .text-link {
@@ -67,12 +68,23 @@ strong {
 }
 
 @keyframes fadein {
-  from {
+  0% {
     opacity: 0;
     top: 15px;
   }
-  to {
+  100% {
     opacity: 1;
     top: 0;
+  }
+}
+
+@keyframes waves {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(4);
+    opacity: 0;
   }
 }
