--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -108,6 +108,15 @@
 
 @include media-breakpoint-down(sm) {
   .filter {
-    position: static;
+    position: relative;
+    top: 0;
+
+    &__inner {
+      position: relative;
+    }
+
+    &__params {
+      position: static;
+    }
   }
 }
