--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,7 @@
 @import 'blocks/mirrors-smart-intro';
 @import 'blocks/mobile-menu-toggle';
 @import 'blocks/objects';
+@import 'blocks/page-overlay';
 @import 'blocks/pagination';
 @import 'blocks/post';
 @import 'blocks/posts-slider';
