--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  z-index: 2;
+  z-index: 20;
 
   &__top {
     &-wrapper {
@@ -31,6 +31,8 @@
 
   &__nav-wrpapper {
     min-height: 40px;
+    position: relative;
+    z-index: 999;
   }
 
   &__languages {
