--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 @import 'blocks/mirrors-smart-advantages';
 @import 'blocks/mirrors-smart-intro';
 @import 'blocks/mobile-menu-toggle';
+@import 'blocks/mobile-nav';
 @import 'blocks/objects';
 @import 'blocks/page-overlay';
 @import 'blocks/pagination';
