--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 @import 'blocks/breadcrumb';
 @import 'blocks/btn-toggle';
 @import 'blocks/cart-link';
+@import 'blocks/category-banner';
 @import 'blocks/category-map';
 @import 'blocks/contacts';
 @import 'blocks/custom-control';
